Use metric registry in battle